[package]
name = "sd-buddy"
version = "0.11.0"
description = "UI for Stable Diffusion on M1 Mac"
authors = ["breadthe"]
license = ""
repository = "https://github.com/breadthe/sd-buddy"
default-run = "sd-buddy"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.0", features = [] }

[dependencies]
anyhow = "1.0.66"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.0", features = ["dialog-open", "fs-create-dir", "fs-read-dir", "fs-read-file", "fs-write-file", "path-all", "protocol-asset", "shell-open"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true  # Automatically strip symbols from the binary.
